--- a/style.css
+++ b/style.css
@@ -1,55 +1,39 @@
-*,
-::before,
-::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: sans-serif;
+    margin-top: 100px;
     text-align: center;
-    width: 100%;
-    height: 100%;
-    background-color: red;
 }
 
-header {
-    background: linear-gradient(120deg, yellow, red);
-    width: 100%;
-    height: 30%;
-
+h1 {
+    text-align: center;
 }
 
-header img {
-    margin: 25px auto;
-    width: 500px;
-    height: auto;
-    border-radius: 50%;
+.container {
+    margin: auto;
+    width: 900px;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
-header h1 {
-    font-size: 50px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: darkred;
-    margin-bottom: 25px;
+img {
+    width: 200px;
+    height: 250px;
+    margin: 50px;
 }
 
-main {
-    padding: 25px 0;
-    height: 750px;
-    width: 100%;
-    background-color: darkblue;
-    color: white;
+img:hover {
+    opacity: 0.9;
+    cursor: pointer;
 }
 
-footer {
-    height: 200px;
-    width: 100%;
-    padding: 25px 0;
-    font-weight: bold;
-    background-color: cornflowerblue;
+.retour {
+    margin-top: 30px;
+    font-size: 20px;
+}
+
+button {
+    display: none;
+    margin: 20px auto;
 }
