--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
     text-align: center;
     width: 100%;
     height: 100%;
-    background-color: red;
 }
 
 header {
@@ -41,7 +40,7 @@ header h1 {
 main {
     padding: 25px 0;
     width: 100%;
-    background-color: darkblue;
+    background-color: #333;
     color: white;
 }
 
